Fixed responsive alignment.

--- a/html/css/kylebatson.css
+++ b/html/css/kylebatson.css
@@ -174,30 +174,6 @@ header nav ul li:last-child {
 	margin-right: 0;
 }
 
-@media (max-width: 600px) {
-	header {
-		grid-template-columns: auto 1rem;
-		grid-template-rows: 3rem 1fr;
-		grid-row-gap: .5rem;
-	}
-	
-	header h1 {
-		grid-column: 1;
-
-	}
-	
-	header #contact {
-
-		grid-column: 1;
-	}
-	
-	header #nightToggle {
-		grid-column: 2;
-		grid-row: 1;
-
-	}
-}
-
 main {
 	grid-row: 2;
 	grid-column: 2;
@@ -491,13 +467,39 @@ footer nav ul li {
 	margin: 0;
 }
 
-@media(max-width: 600px){
+@media (max-width: 600px) {
+	header {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 3rem 1fr;
+		grid-row-gap: .5rem;
+		margin-top: 1rem;
+	}
+	
+	header h1 {
+		grid-column: 1;
+	}
+	
+	header nav {
+		grid-column: 2;
+	}
+	
+	header #contact {
+
+		grid-column: 1;
+	}
+	
+	header #nightToggle {
+		grid-column: 2;
+		grid-row: 1;
+	}
+	
 	main {
 		grid-template-columns: 1fr;
 		grid-template-areas: 
 			"portfolio"
 			"skills"
 			"intro";
+		grid-gap: 0;
 	}
 	
 	section#intro {
